# neuro-scan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
e2e-circuit/: circuit.json
e2e-compare/: comparison.json
e2e-crossprobe/: cross_probe.json
e2e-eq/: ablation.csv  report.json
e2e-results/: ablation.csv  report.json
examples/: ablate_qwen2_7b.py  full_map_llama3.py
src/neuro_scan/: __init__.py  circuit.py  cli.py  compare.py  config.py  cross_probe.py  export.py  fetch.py  labeler.py  scanner.py  scoring.py  similarity.py  tuned_lens.py  visualization.py
src/neuro_scan/backends/: __init__.py  base.py  exllamav2.py  transformers_backend.py  vllm_backend.py
src/neuro_scan/probes/: __init__.py  base.py  custom.py  eq_probe.py  json_probe.py  math_probe.py
tests/: conftest.py  test_ablation.py  test_backends.py  test_circuit.py  test_cli_blackbox.py  test_compare.py  test_cross_probe.py  test_fetch.py  test_labeler.py  test_logit_lens.py  test_real_scenarios.py  test_smoke.py  test_tuned_lens.py  test_visualization.py  test_vllm_backend.py
