[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuro-scan"
version = "0.2.3"
description = "LLM Neuroanatomy Explorer — map what each transformer layer does"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "XXO47OXX" },
]
keywords = [
    "llm", "neuroanatomy", "interpretability", "mechanistic-interpretability",
    "layer-ablation", "logit-lens", "attention-analysis", "transformer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "plotly>=5.18.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
exllamav2 = ["exllamav2>=0.1.0"]
lookup = ["datasets>=2.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
neuro-scan = "neuro_scan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neuro_scan"]

[project.urls]
Homepage = "https://github.com/XXO47OXX/neuro-scan"
Documentation = "https://github.com/XXO47OXX/neuro-scan#readme"
Issues = "https://github.com/XXO47OXX/neuro-scan/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: critical-path quick validation (<10s)",
    "slow: performance/stress tests (>5s each)",
    "integration: requires fixtures or mock models",
]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["neuro_scan"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100
